# ClipSpotter_for_personal

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  setup.py
.github/workflows/: lint-python.yml
clipspotter/: app.py
clipspotter/api/: __init__.py  twitch.py
clipspotter/cogs/: clip_range.py  cshelp.py  display.py  remove.py  set.py  set_streamer.py  status.py
clipspotter/config/: __init__.py
clipspotter/data/: help_data.json
clipspotter/models/: base_model.py  category.py  discord_model.py  twitch_model.py  visibility.py
clipspotter/utils/: database.py
migrations/: env.py
migrations/versions/: 03076247d6f4_1_migrate_to_sqlite.py  f6dc74635648_1_migrate_to_sqlite.py  fa1f2c4cc4be_1_migrate_to_sqlite.py
myapp/: __init__.py  api.py  app.py  config.py  constants.py  help_data.json
myapp/cogs/: clip-range.py  clip_range.py  cshelp.py  day.py  display.py  remove.py  set-streamer.py  set.py  set_streamer.py  status.py
myapp/models/: __init__.py  base_model.py  category.py  discord_model.py  twitch_model.py  visibility.py
myapp/utils/: database.py
