[tool.poetry]
name = "clipspotter-for-personal"
version = "1.8.3"
description = ""
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.11.1"
alembic = "1.13.1"
uvicorn = "0.30.1"
discord-py = "2.4.0"
fastapi = "0.111.0"
levenshtein = "0.25.1"
requests = "2.32.1"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.30"
aiohttp = "3.9.5"
greenlet = "3.0.3"
aiosqlite = "^0.20.0"
mypy = "^1.11.2"
ruff = "^0.6.6"
aiofiles = "^24.1.0"
rapidfuzz = "^3.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    'requests',
    'aiofiles',
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

# Option Settings
## https://pypi.org/project/ruff/0.0.242/#supported-rule


lint.select = ["ALL"]
lint.ignore = [
    "D",
    "ANN",
    "UP",
    "PTH",
    "RUF",
]

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint.per-file-ignores]

# https://docs.astral.sh/ruff/settings/#lint_per-file-ignores
"*.py" = [
    "ANN101",
    "ANN102",
    "COM812",
    "ERA001",
    "FBT001",
    "FBT002",
    "INP001",
    "PT009",
    "PTH207",
    "S311",
    "S603",
    "T201",
    "TRY002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
